<resources>
    <string name="general_Name">shoot report</string>
    <string name="preferenceFile_report" translatable="false">preference_report</string>
    <string name="preferenceReportRifleNumber" translatable="false">preferenceRifleNumber</string>
    <string name="preferenceReportRifleName" translatable="false">preferenceRifleName</string>
    <string name="preferenceReportRifleId" translatable="false">preferenceRifleId</string>
    <string name="navigationTraining">Training</string>
    <string name="navigationCompetition">Competition</string>
    <string name="navigationPlan">Procedure</string>
    <string name="navigationGoals">Goals</string>
    <string name="topMenuReload">Reload</string>
    <string name="topMenuTrainer">Coach</string>
    <string name="topMenuExportTraining">Export training</string>
    <string name="topMenuExportCompetition">Export competition</string>
    <string name="topMenuData">Master data</string>
    <string name="topMenuInfo">Information</string>
    <string name="topMenuPartner">Partner</string>
    <string name="topMenuCooperation">Cooperation</string>
    <string name="topMenuFacebook">Facebook</string>
    <string name="topMenuInstagram">Instagram</string>
    <string name="detailMenuEdit">Edit</string>
    <string name="trainerMenuEquipment">Equipment</string>
    <string name="trainerMenuTech">Technical</string>
    <string name="trainerMenuMental">Mental</string>
    <string name="dataMenuPerson">Person</string>
    <string name="dataMenuDevice">Equipment</string>
    <string name="activityRifle_DeleteMessage">Are you sure you want to delete this discipline?</string>
    <string name="activityRifle_DeleteMessageYes">Yes</string>
    <string name="activityRifle_DeleteMessageNo">No</string>
    <string name="activityInformation_Title">Information</string>
    <string name="activityPartner_Title">Partner</string>
    <string name="activityPartner_Headline">We say THANK YOU!</string>
    <string name="activityPartner_Info">Become a partner of us now.</string>
    <string name="activityPartner_Button">Contact</string>
    <string name="activityCooperation_Title">Cooperation</string>
    <string name="activityCooperation_Headline">We say THANK YOU!</string>
    <string name="activityCooperation_Info">Cooperate with us now.</string>
    <string name="activityCooperation_Button">Contact</string>
    <string name="activityDetails_AddTraining">Add training</string>
    <string name="activityDetails_AddCompetition">Add competition</string>
    <string name="activityDetails_EditTraining">Edit training</string>
    <string name="activityDetails_EditCompetition">Edit competition</string>
    <string name="activityDetails_InputWeapon">Weapon</string>
    <string name="activityDetails_InputIndicator">Rating</string>
    <string name="activityDetails_CompetitionInputPlace">Where was your competition?</string>
    <string name="activityDetails_CompetitionInputKind">Which mode did you shoot?</string>
    <string name="activityDetails_InputKind">What did you train?</string>
    <string name="activityDetails_InputPlace">Where did you train?</string>
    <string name="activityDetails_InputDate">Date</string>
    <string name="activityDetails_InputReport">Training report</string>
    <string name="activityDetails_CompetitionInputReport">Competition report</string>
    <string name="activityDetails_InputPoints">Series %s</string>
    <string name="activityDetails_Points">Total rings:</string>
    <string name="activityDetails_AverageDescription">Average:</string>
    <string name="activityDetails_Average">%1$s</string>
    <string name="activityDetails_ButtonShare">Share</string>
    <string name="activityDetails_ShareTitle">Sharing</string>
    <string name="activityDetails_ShareError">You have to first save the entry.</string>
    <string name="activityDetails_ButtonPhoto">Photo</string>
    <string name="activityDetails_ButtonQR">QR code</string>
    <string name="activityDetails_InfoQR">Here you can scan your result via QR code in the future.</string>
    <string name="activityDetails_ImageError">Image could not be loaded.</string>
    <string name="activityDetails_InputCount">Number of shots</string>
    <string name="activityDetails_ButtonSave">Save</string>
    <string name="activityDetails_ChooseImageLocation">How do you want to take the photo?</string>
    <string name="activityDetails_SaveSuccess">Successfully saved.</string>
    <string name="activityDetails_DeleteMessage">Sure to delete the picture?</string>
    <string name="activityDetails_DeleteMessageYes">Yes</string>
    <string name="activityDetails_DeleteMessageNo">No</string>
    <string name="activityTraining_Title">Coach</string>
    <string name="activityTraining_TabEquipment">Equipment</string>
    <string name="activityTraining_TabTechnology">Technical</string>
    <string name="activityTraining_TabMental">Mental</string>
    <string name="activityData_Title">Master data</string>
    <string name="fragmentTraining_TabTraining">Training</string>
    <string name="fragmentTraining_ListInfoText">It`s time for your first training session!</string>
    <string name="fragmentTraining_TabStatistics">Statistics</string>
    <string name="fragmentTraining_Infotext">%1$s, in %2$s</string>
    <string name="fragmentTraining_DeleteMessage">Are you sure you want to delete the training?</string>
    <string name="fragmentTraining_DeleteMessageYes">Yes</string>
    <string name="fragmentTraining_DeleteMessageNo">No</string>
    <string name="fragmentTraining_SeriesDefault" translatable="false">0</string>
    <string name="fragmentTrainingStatistics_TitleComplete">\u00D8 Shot whole rings</string>
    <string name="fragmentTrainingStatistics_TitleHalf">\u00D8 Shot tenth of a ring</string>
    <string name="fragmentTrainingStatistics_Points">Rings</string>
    <string name="fragmentCompetition_TabCompetition">Competition</string>
    <string name="fragmentCompetition_ListInfoText">It`s time for your first competition!</string>
    <string name="fragmentCompetition_TabStatistics">Statistics</string>
    <string name="fragmentCompetition_Infotext">%1$s, in %2$s</string>
    <string name="fragmentCompetition_DeleteMessage">Are you sure you want to delete the competition?</string>
    <string name="fragmentCompetition_DeleteMessageYes">Yes</string>
    <string name="fragmentCompetition_DeleteMessageNo">No</string>
    <string name="fragmentCompetition_SeriesDefault" translatable="false">0</string>
    <string name="fragmentCompetitionStatistics_TitleComplete">Competition whole rings</string>
    <string name="fragmentCompetitionStatistics_TitleHalf">Competition tenth of a ring</string>
    <string name="fragmentCompetitionStatistics_Points">Rings</string>
    <string name="fragmentCompetitionStatistics_Result">Result</string>
    <string name="fragmentGoal_TabComplete">Whole rings</string>
    <string name="fragmentGoal_TabTenth">Tenth of a ring</string>
    <string name="fragmentGoals_header40">My goals 40 shots</string>
    <string name="fragmentGoals_header60">My goals 60 shots</string>
    <string name="fragmentGoals_chaos_title">Chaos</string>
    <string name="fragmentGoals_chaos_dialog">Chaos</string>
    <string name="fragmentGoals_minimal_title">Minimal</string>
    <string name="fragmentGoals_minimal_dialog">Minimal</string>
    <string name="fragmentGoals_real_title">Real</string>
    <string name="fragmentGoals_real_dialog">Real</string>
    <string name="fragmentGoals_optimal_title">Optimal</string>
    <string name="fragmentGoals_optimal_dialog">Optimal</string>
    <string name="fragmentGoals_wish_title">Jackpot</string>
    <string name="fragmentGoals_wish_dialog">Jackpot</string>
    <string name="fragmentPlan_TabBefore">Preparation</string>
    <string name="fragmentPlan_TabDuring">Shot sequence</string>
    <string name="fragmentPlan_header">My procedure before competition</string>
    <string name="fragmentPlanShoot_header">My procedure for the shot</string>
    <string name="fragmentPlan_beforeSummary">Here you can define what you do as ideal preparation.</string>
    <string name="fragmentPlan_beforeText">Preparation</string>
    <string name="fragmentPlan_duringSummary">Here you can note your ideal shot sequence.</string>
    <string name="fragmentPlan_duringText">Shot sequence</string>
    <string name="fragmentPerson_Header">Shooter</string>
    <string name="fragmentPerson_InputName">Name</string>
    <string name="fragmentPerson_InputAge">Age</string>
    <string name="fragmentPerson_InputSize">Height</string>
    <string name="fragmentPerson_InputPerformance">Best Performance</string>
    <string name="fragmentPerson_InputAssociation1">1. Club</string>
    <string name="fragmentPerson_InputAssociation2">2. Club</string>
    <string name="fragmentPerson_InputTrainer">Coach</string>
    <string name="fragmentPerson_InputTrainerMail">E-Mail Coach</string>
    <string name="fragmentPerson_InputSquad">Squad Coach</string>
    <string name="fragmentPerson_InputSquadMail">E-Mail Squad Coach</string>
    <string name="fragmentPerson_ButtonSave">Save Data</string>
    <string name="fragmentPerson_SaveSuccessful">Data saved successfully.</string>
    <string name="fragmentDataDevice_header">My settings on the equipment</string>
    <string name="fragmentDataDevice_beforeText">All about my equipment</string>
    <string name="fragmentDataDevice_beforeSummary">Describe all the important details about your equipment.</string>
    <string name="fragmentInformation_TitleAuthor">Information about the author</string>
    <string name="fragmentInformation_AuthorTitle">Author</string>
    <string name="fragmentInformation_AuthorValue">Markus Burkhardt and Lars Helmuth Probst</string>
    <string name="fragmentInformation_WebsiteTitle">Website</string>
    <string name="fragmentInformation_WebsiteValue" translatable="false">www.burkhardt-sport.solutions</string>
    <string name="fragmentInformation_TitleVersion">Information about the version</string>
    <string name="fragmentInformation_VersionTitle">Version</string>
    <string name="fragmentInformation_VersionValue" translatable="false">1.4 Release</string>
    <string name="fragmentInformation_BuildTitle" translatable="false">Build</string>
    <string name="fragmentInformation_BuildValue" translatable="false">20210903</string>
    <string name="fragmentInformation_TitleSource">Sources</string>
    <string name="fragmentInformation_SourceTitle">Texts of the trainer function are in accordance with the Trainer-C mass sports training of the \"Deustchen Schützenbundes\".</string>
    <string name="fragmentTrainerEquipment_TabCloth">Clothes</string>
    <string name="fragmentTrainerEquipment_TabSport">Equipment</string>
    <string name="fragmentTrainerEquipment_TabEquipment">Accessories</string>
    <string name="fragmentTrainerTech_TabAttack">Positioning</string>
    <string name="fragmentTrainerTech_TabDestination">Procedure</string>
    <string name="fragmentTrainerMental_TabRelax">Rest</string>
    <string name="fragmentTrainerMental_TabMotivation">Motivation</string>
    <string name="fragmentTrainerMental_TabFocus">Focus</string>
</resources>