<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_information"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:text="@string/activityPartner_Headline"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/activityPartner_Image1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="26dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_advertising_1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <ImageView
                android:id="@+id/activityPartner_Image2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="26dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_advertising_2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <ImageView
                android:id="@+id/activityPartner_Image3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="26dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_advertising_3" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <ImageView
                android:id="@+id/activityPartner_Image4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="26dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_advertising_5" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <ImageView
                android:id="@+id/activityPartner_Image5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="26dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_advertising_5" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <ImageView
                android:id="@+id/activityPartner_Image6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="26dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_advertising_6" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="26dp"
                android:gravity="center"
                android:text="@string/activityPartner_Info"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/activityPartner_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/activityPartner_Button" />

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>